@@ -497,6 +497,7 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * (bug 11115) Adding SHA1 hash to imageinfo query
 * (bug 10898) API does not return an edit token for non-existent pages
 * (bug 10890) Timestamp support for categorymembers query
+* (bug 10980) Add exclude redirects on backlinks
 
 == Maintenance script changes since 1.10 ==
 
